query-compiler/query-compiler/tests/snapshots/queries__queries@order-by-to-many-1m-field.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/order-by-to-many-1m-field.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
query «SELECT "t0"."id", "t0"."email", "t0"."role"::text FROM "public"."User" AS
       "t0" ORDER BY (SELECT "public"."Post"."title" FROM "public"."Post" WHERE
       ("t0"."id" = "public"."Post"."userId") ORDER BY "public"."Post"."title"
       ASC LIMIT $1) ASC»
params [const(BigInt(1))]
